Netflix User-Interface

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
-    <title>Netflix India - Watch</title>
+    <title>Netflix India </title>
 </head>
 <body>
 
@@ -35,7 +35,7 @@
         <div class="feature">
             <div class="page2 flex container">
                 <div class="desc">
-                    <h1>Enjoy on your TV</h1>
+                    <h1>Enjoy on your TV || Theater</h1>
                     <p>Watch on smart TVs, PlayStation, Xbox, Chromecast, Apple TV, Blu-ray players and more.</p>
                 </div>
                 <img src="page2.png" alt="">
@@ -155,7 +155,7 @@
           </div>
 
         <div class="footer container">
-            <p>Questions? Call <span>000-800-919-1694</span> </p>
+            <p>Questions? Call &nbsp; <span>000-800-919-1694</span> </p>
             <div class="footer-content">
                 <div class="footer1 f-property">
                     <a href="#">FAQ</a>
